# haskell-chell

./: .gitignore  .travis.yml  cabal.project  readme.md  stack.yaml
.github/workflows/: haskell-ci.yml  test.yml
chell/: changelog.md  chell.cabal  readme.md
chell-hunit/: changelog.md  chell-hunit.cabal  readme.md
chell-hunit/Test/Chell/: HUnit.hs
chell-quickcheck/: changelog.md  chell-quickcheck.cabal  readme.md
chell-quickcheck/Test/Chell/: QuickCheck.hs
chell/Test/: Chell.hs
chell/Test/Chell/: Main.hs  Output.hs  Types.hs
configurations/: ghc-8.10.project  ghc-8.2.project  ghc-8.4.project  ghc-8.6.project  ghc-8.8.project  ghc-9.0.project  ghc-9.2.project
nix/: default.nix
nix/haskell/: options.nix
