cabal-version: 3.0

name: chell-quickcheck
version: 0.2.5.4
x-revision: 2

synopsis: QuickCheck support for Chell
category: Testing

license: MIT
license-file: license.txt
author: John Millikin <john@john-millikin.com>
maintainer: Chris Martin, Julie Moronuki

homepage: https://github.com/typeclasses/chell

description:
    QuickCheck support for the Chell testing library.

extra-source-files: *.md

tested-with:
    GHC == 9.12.1
    GHC == 9.10.1
    GHC == 9.8.2
    GHC == 9.6.6
    GHC == 9.4.8
    GHC == 9.2.8

library
    default-language: GHC2021
    ghc-options: -Wall

    build-depends:
      , base ^>= 4.16 || ^>= 4.17 || ^>= 4.18 || ^>= 4.19 || ^>= 4.20 || ^>= 4.21
      , chell ^>= 0.5
      , QuickCheck ^>= 2.14.2
      , random ^>= 1.2.1 || ^>= 1.3.0

    exposed-modules:
        Test.Chell.QuickCheck
