cabal-version: 3.0

name: chell
version: 0.5.0.2
x-revision: 4

synopsis: A simple and intuitive library for automated testing.
category: Testing

license: MIT
license-file: license.txt
author: John Millikin <john@john-millikin.com>
maintainer: Chris Martin, Julie Moronuki

homepage: https://github.com/typeclasses/chell

description:
    Chell is a simple and intuitive library for automated testing.
    It natively supports assertion-based testing, and can use companion libraries
    such as @chell-quickcheck@ to support more complex testing strategies.

extra-source-files: *.md

tested-with:
    GHC == 9.12.1
    GHC == 9.10.1
    GHC == 9.8.2
    GHC == 9.6.6
    GHC == 9.4.8
    GHC == 9.2.8

flag color-output
    description: Enable colored output in test results
    default: True

library
    default-language: GHC2021
    ghc-options: -Wall

    build-depends:
      , base ^>= 4.16 || ^>= 4.17 || ^>= 4.18 || ^>= 4.19 || ^>= 4.20 || ^>= 4.21
      , bytestring ^>= 0.11.4 || ^>= 0.12
      , options ^>= 1.2.1
      , patience ^>= 0.3
      , random ^>= 1.2.1 || ^>= 1.3.0
      , template-haskell ^>=2.18 || ^>= 2.19 || ^>= 2.20 || ^>= 2.21 || ^>= 2.22 || ^>= 2.23
      , text ^>= 1.2.5 || ^>= 2.0 || ^>= 2.1
      , transformers ^>= 0.5.6 || ^>= 0.6

    if flag(color-output)
      build-depends:
        , ansi-terminal ^>= 1.0 || ^>= 1.1

    exposed-modules:
        Test.Chell

    other-modules:
        Test.Chell.Main
        Test.Chell.Output
        Test.Chell.Types
